<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:src="@mipmap/ic_launcher"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/text_view_font_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/color_black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_message"
            style="@style/text_view_font_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/dialog_install_recommend_message"
            android:textColor="@color/color_dark_gray"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/lixi_alert_view_confirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="15dp"
            android:background="@color/color_light_gray"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/lixi_alert_btn_cancel"
                style="@style/text_view_font_bold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="0.5dp"
                android:layout_weight="1"
                android:background="@color/color_concrete"
                android:text="@string/skip"
                android:textAllCaps="true"
                android:textColor="@color/color_black"
                android:textSize="14sp" />

            <Button
                android:id="@+id/lixi_alert_btn_confirm"
                style="@style/text_view_font_bold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:layout_marginStart="0.5dp"
                android:layout_weight="1"
                android:background="@color/color_black"
                android:text="@string/install"
                android:textAllCaps="true"
                android:textColor="@color/color_white"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</layout>
